--- a/popcorn/pubspec.yaml
+++ b/popcorn/pubspec.yaml
@@ -18,8 +18,9 @@ dependencies:
   bloc: ^6.1.1
   rxdart: ^0.25.0
   eva_icons_flutter: ^2.0.1
-  flutter_rating_bar: ^3.2.0+1
   page_indicator: ^0.3.0
+  sliver_fab: ^1.0.0
+  youtube_player_flutter: ^7.0.0+7
 
 dev_dependencies:
   flutter_test:
